// Vitest Snapshot v1

exports[`TheOptions > Integration test > should correctly mount initial state 1`] = `
"<div data-v-481f20da=\\"\\">
  <render-die-stub dievalue=\\"1\\" class=\\"die-preview\\" data-v-481f20da=\\"\\"></render-die-stub><a class=\\"cta\\" data-v-481f20da=\\"\\"> options </a>
  <!--v-if-->
</div>"
`;

exports[`TheOptions > Integration test > should correctly render theme selection 1`] = `
"<div data-v-481f20da=\\"\\">
  <render-die-stub dievalue=\\"1\\" class=\\"die-preview\\" data-v-481f20da=\\"\\"></render-die-stub><a class=\\"cta\\" data-v-481f20da=\\"\\"> options </a>
  <div class=\\"options-container\\" data-v-481f20da=\\"\\">
    <render-die-stub dievalue=\\"1\\" forcetheme=\\"classic\\" class=\\"die-button theme-classic\\" data-v-481f20da=\\"\\"></render-die-stub>
    <render-die-stub dievalue=\\"1\\" forcetheme=\\"design\\" class=\\"die-button theme-design\\" data-v-481f20da=\\"\\"></render-die-stub>
    <render-die-stub dievalue=\\"1\\" forcetheme=\\"numbers\\" class=\\"die-button theme-numbers\\" data-v-481f20da=\\"\\"></render-die-stub>
  </div>
</div>"
`;
